--- a/src/css/css.css
+++ b/src/css/css.css
@@ -32,6 +32,9 @@
 .hidden{
   display: none;
 }
+.inline{
+  display: inline-block;
+}
 
 #room_manager{
   border: 1px solid goldenrod;
@@ -46,10 +49,11 @@
 }
 
 #private_message_box{
-  width: 50%;
-  height: 25%;
+  width: 100%;
+  /*height: 100%;*/
   border: 1px solid lawngreen;
   position: relative;
+  /*overflow: hidden;*/
 }
 
 #close_private_message_box{
@@ -73,5 +77,21 @@
   color: rgba(1, 231, 1, 0.9)
 }
 
+#my_private_messages{
+  width: 100%;
+  /*height: 100%;*/
+  overflow-y: scroll;
+  /*padding-right: 17px;*/
+  height: 50px;
+}
+
+.is_public_room{
+  color:lawngreen;
+
+}
+
+.not_public_room{
+  color:indianred;
+}
 
 
